# Trix-Audio-Converter

./: .env.example  .gitignore  LEGAL.md  LICENSE  PLAN.md  PRIVACY_POLICY.md  README.md  TERMS_OF_USE.md  eslint.config.js  index.html  installer.nsi  package-lock.json  package.json  run.bat  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/icons/: generate_icon.py
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src-rs/: Cargo.toml  build.rs
src-rs/src/: accurate_rip.rs  ai_masterer.rs  ai_noise.rs  album_art.rs  api.rs  audio_analyzer.rs  audio_catalog.rs  audio_merge_split.rs  auto_tagger.rs  batch_renamer.rs  batch_rules.rs  cd_burner.rs  cd_ripper.rs  channel_mixer.rs  cli.rs  cloud_sync.rs  codec_detector.rs  codec_profiles.rs  converter.rs  crash_logger.rs  cue_sheet.rs  de_esser.rs  de_reverb.rs  device_presets.rs  dsd_support.rs  dsp_chain.rs  duplicate_detector.rs  dynamic_eq.rs  dynamic_range_meter.rs  effects.rs  equalizer.rs  error.rs  fade_effect.rs  fft_analyzer.rs  folder_structure.rs  formats.rs  gpu_acceleration.rs  internet_radio.rs  logger.rs  loudness.rs  (+28 more)
src/components/layout/: TitleBar.tsx
src/components/panels/: FormatSelector.tsx  QueuePanel.tsx  SettingsPanel.tsx  ToolSections.tsx
src/components/ui/: ErrorBoundary.tsx  Modal.tsx
src/hooks/: useI18n.ts  useOnline.ts  usePersistedState.ts  usePickFiles.ts  useQueue.ts  useSettings.ts  useTheme.ts
src/types/: index.ts
src/utils/: api.ts  format.test.ts  format.ts
