[package]
name = "trix-audio-converter"
version = "1.0.0"
edition = "2021"
description = "Trix Audio Converter — Conversor de áudio universal com 106 formatos de saída"
authors = ["João Vitor de Melo <joaovmelo259@gmail.com>"]
license = "MIT"
repository = "https://github.com/damonio13/Trix-Audio-Converter"
homepage = "https://github.com/damonio13/Trix-Audio-Converter"
readme = "../README.md"
keywords = ["audio", "converter", "ffmpeg", "batch", "wav", "flac", "mp3"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "trix"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "limit"] }
tower = { version = "0.4", features = ["limit"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5"
open = "5"
urlencoding = "2"
subtle = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tao = "0.35"
wry = "0.55"
png = "0.17"
rfd = "0.12"
ctrlc = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
